--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -28,11 +28,13 @@
                     <% orders.forEach(order => { %>
                         <li class="orders__item">
                             <h1>Order - # <%= order._id %> - <a href="/orders/<%= order._id %>">Invoice</a></h1>
+                            <h1> Delivery Complete - <%= order.isDone %>
                             <ul class="orders__products">
                                 <% order.products.forEach(p => { %>
                                     <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
                                 <% }); %>
                             </ul>
+                            <button type="submit">Mark as Done</button>
                         </li>
                     <% }); %>
                 </ul>
