--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -27,7 +27,7 @@
                 <ul class="orders">
                     <% orders.forEach(order => { %>
                         <li class="orders__item">
-                            <h1>Order - # <%= order._id %> - <a href="/orders/<%= order._id %>">Invoice</a></h1>
+                            <h1>Order - # <%= order._id %> - <a href="/orders/<%= order._id %>" style="color:blue">Invoice</a></h1>
                             <h1> Delivery Complete - <%= order.isDone %>
                             <ul class="orders__products">
                                 <% order.products.forEach(p => { %>
