--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -19,7 +19,7 @@
                                     <img src="/<%= product.imageUrl %>" alt="<%= product.title %>" class="center">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">$
+                                    <h2 class="product__price">
                                         <%= product.price %>
                                     </h2>
                                     <p class="product__description">
