--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" href="/css/stylelogin.css">
 		<meta name="google-signin-client_id" content="54111174425-rnj75h4bll3odlc8gc01djh9b7kmn7od.apps.googleusercontent.com">
 
+
 </head>
 
 <script src="https://apis.google.com/js/platform.js" async defer> </script>
@@ -24,6 +25,7 @@ function onSignIn(googleUser) {
 	console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
 	console.log(googleUser);
 }
+
 </script>
 
 <body>
@@ -91,6 +93,9 @@ function onSignIn(googleUser) {
 									</div>
 								</form>
 							</div>
+							<div data-widget data-app="3ylu3ufecu7i3edu8yto"></div>
+							<script src="//cdn.ringcaptcha.com/widget/v2/bundle.min.js"></script>
+
 							<div class="social">
 								<ul>
 
