--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -358,13 +358,17 @@
 				<a class="block relative h-48 rounded overflow-hidden">
 					<img alt="ecommerce" class="object-cover object-center w-full h-full block" src="<%= product.imageUrl %>">
 				</a>
-				<div class="mt-4">
+				<div class="mt-4" style="text-align:center">
 					<!-- <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3> -->
 					<h2 class="text-gray-900 title-font text-lg font-medium"><%= product.title %></h2>
 					<p class="mt-1">Price : <%= product.price %></p>
 					<p class="mt-1"><%= product.description %></p>
+					<div class="quantity buttons_added" >
+						<!-- yeh hai vo button iska css aapko style.css mai milega or iska js index.js mai merko net pe milgya tha maine copy krdiya sidha -->
+<input type="button" value="-" class="minus "><input type="number" step="1" min="0" max="" name="quantity" value="0" title="Qty" class="input-text qty text" size="4" pattern="" inputmode=""><input type="button" value="+" class="plus">
+</div>
 					<div class="card__actions" style="float:right">
-							<a href="/products/<%= product._id %>" class="btn"><button type="button" name="button" class="btn btn-success">Details</button></a>
+
 							<% if (isAuthenticated) { %>
 									<%- include('../includes/add-to-cart.ejs', {product: product}) %>
 							<% } %>
@@ -422,7 +426,7 @@
 	<div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
 		<a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
 				<span ><img src="https://ik.imagekit.io/slashit/choco_divine/2222-removebg-preview_KfrjXNTs2-.png" alt="" style="width:60px;height:60px" class="center"></span>
-			
+
 			<span class="ml-3 text-xl">CHOCODIVINE</span>
 		</a>
 		<p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 ChocoDivine —
