--- a/views/includes/pagination.ejs
+++ b/views/includes/pagination.ejs
@@ -1,4 +1,4 @@
-<section class="pagination">
+<section class="pagination center">
     <% if (currentPage !== 1 && previousPage !== 1) { %>
         <a href="?page=1">1</a>
     <% } %>
