--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -252,10 +252,15 @@
 
 <hr>
 <!-- for product or timrlinr -->
+
 <section class="text-gray-700 body-font"  data-aos="fade-up"
 		data-aos-offset="200"
 		data-aos-delay="50"
 		data-aos-duration="1000" style="margin:0;padding:0">
+		<div class="center" style="text-align:center">
+				<a  class="btn btn-success " style="border-radius:20px;"><h1>OUR SPECIALITIES</h1></a>
+		</div>
+
 	<div class="container px-5 py-24 mx-auto flex flex-wrap">
 		<div class="flex relative pt-10 pb-20 sm:items-center md:w-2/3 mx-auto">
 			<div class="h-full w-6 absolute inset-0 flex items-center justify-center">
@@ -272,8 +277,8 @@
 					</svg>
 				</div>
 				<div class="flex-grow sm:pl-6 mt-6 sm:mt-0 t">
-					<h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Shooting Stars</h2>
-					<p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+					<h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Home Made Chocolates</h2>
+					<p class="leading-relaxed">No artificial materials added , just home made pure Chocolates.</p>
 				</div>
 			</div>
 		</div>
@@ -292,8 +297,8 @@
 					</svg>
 				</div>
 				<div class="flex-grow sm:pl-6 mt-6 sm:mt-0 ">
-					<h2 class="font-medium title-font text-gray-900 mb-1 text-xl">The Catalyzer</h2>
-					<p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+					<h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Sugar Free Chocolates</h2>
+					<p class="leading-relaxed">We offer special sugar free choclates , for diabities patients also.</p>
 				</div>
 			</div>
 		</div>
@@ -313,8 +318,8 @@
 					</svg>
 				</div>
 				<div class="flex-grow sm:pl-6 mt-6 sm:mt-0 ">
-					<h2 class="font-medium title-font text-gray-900 mb-1 text-xl">The 400 Blows</h2>
-					<p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+					<h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Paan Chocolates</h2>
+					<p class="leading-relaxed">For the pan and choclates lover its a prefect combo to have .</p>
 				</div>
 			</div>
 		</div>
@@ -334,8 +339,8 @@
 					</svg>
 				</div>
 				<div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
-					<h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Neptune</h2>
-					<p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+					<h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Right at your place</h2>
+					<p class="leading-relaxed">Get all of these in your city , Kurukshetra at reasonable prices.</p>
 				</div>
 			</div>
 		</div>
@@ -349,6 +354,9 @@
 		data-aos-offset="200"
 		data-aos-delay="50"
 		data-aos-duration="1000">
+		<div class="center" style="text-align:center">
+				<a  class="btn btn-success " style="border-radius:20px;"><h1>OUR PRODUCTS</h1></a>
+		</div>
 	<div class="container px-5 py-24 mx-auto">
 		<div class="flex flex-wrap -m-4">
 			<% for (let product of prods) { %>
@@ -360,7 +368,7 @@
 					<!-- <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3> -->
 					<h2 class="text-gray-900 title-font text-lg font-medium"><%= product.title %></h2>
 					<p class="mt-1">Price : <%= product.price %></p>
-					<p class="mt-1"><%= product.description %></p>					
+					<p class="mt-1"><%= product.description %></p>
 					<div class="card__actions">
 						<% if(isAuthenticated) { %>
 							<form action="/cart" method="POST">
@@ -389,6 +397,9 @@
 		data-aos-offset="400"
 		data-aos-delay="50"
 		data-aos-duration="1500">
+		<div class="center" style="text-align:center">
+				<a  class="btn btn-success " style="border-radius:20px;"><h1>CONTACT US</h1></a>
+		</div>
 	<div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap" style="margin: 0">
 		<div class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative" style="
 		margin-right: 0px;
