--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -18,7 +18,7 @@
 									<img src="/<%= product.imageUrl %>" alt="<%= product.title %>" class="center">
 								</div>
 								<div class="card__content">
-									<h2 class="product__price">$
+									<h2 class="product__price"> ₹
 										<%= product.price %>
 									</h2>
 									<p class="product__description">
