--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -38,6 +38,7 @@
 </footer>
 <script src="/js/main.js"></script>
 <script src="/js/index.js"></script>
+<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
 </body>
 
 </html>
