--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -21,7 +21,7 @@
                 <div class="user-message user-message--error"><%= errorMessage %></div>
               <% } %>
               <div class="main-icon">
-                <span ><img src="https://ik.imagekit.io/slashit/choco_divine/2222-removebg-preview_KfrjXNTs2-.png" alt="" style="width:100px;height:100px" class="center"></span>
+                <span ><img src="/images/logo.png" alt="" style="width:100px;height:100px" class="center"></span>
               </div>
               <div class="header-left-bottom">
                 <form action="/login" method="POST">
