--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -2,7 +2,7 @@
 		<link rel="stylesheet" href="/css/forms.css">
 		<link rel="stylesheet" href="/css/auth.css">
 		<link rel="stylesheet" href="/css/stylelogin.css">
-		
+
 
 
 </head>
@@ -25,7 +25,7 @@
 								<div class="user-message user-message--error"><%= errorMessage %></div>
 							<% } %>
 							<div class="main-icon">
-								  <span ><img src="https://ik.imagekit.io/slashit/choco_divine/2222-removebg-preview_KfrjXNTs2-.png" alt="" style="width:100px;height:100px" class="center"></span>
+								  <span ><img src="/images/logo.png" alt="" style="width:100px;height:100px" class="center"></span>
 							</div>
 							<div class="header-left-bottom">
 								<form action="/signup" method="POST">
