--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -2,7 +2,7 @@
 	>
 	<div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
 		<a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-				<span ><img src="https://ik.imagekit.io/slashit/choco_divine/2222-removebg-preview_KfrjXNTs2-.png" alt="" style="width:60px;height:60px" class="center"></span>
+				<span ><img src="/images/logo.png" alt="" style="width:60px;height:60px" class="center"></span>
 				<path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
 			</svg>
 			<span class="ml-3 text-xl">CHOCODIVINE</span>
