--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky">
 	<button class="navbar-toggler" type="button" style="float:left;border:none" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" onclick="openNav()">
 		<span>
-			<img src="https://ik.imagekit.io/slashit/choco_divine/121994_bA7-vUbdM.png" alt="chocomenu" style="width:40px;height:40px;z-index:2">
+			<img src="/images/choco.png" alt="chocomenu" style="width:40px;height:40px;z-index:2">
 		</span>
 	</button>
-		<span ><img src="https://ik.imagekit.io/slashit/choco_divine/2222-removebg-preview_KfrjXNTs2-.png" alt="" style="width:60px;height:60px" class="center"></span>
+		<span ><img src="/images/logo.png" alt="" style="width:60px;height:60px" class="center"></span>
 	<!-- <a href="#"><span class="fa fa-user"></span></a> -->
 	<div class="collapse navbar-collapse" id="navbarNavDropdown">
 		<ul class="navbar-nav">
