--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -36,9 +36,11 @@
 		</span>
 	</div>
 </footer>
-<script src="/js/main.js"></script>
+<script src="/js/sidenav.js" charset="utf-8"></script>
 <script src="/js/index.js"></script>
-<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
+<script src="/js/main.js"></script>
+
+<!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *"> -->
 </body>
 
 </html>
