--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -12,7 +12,7 @@
             <div class="card">
 
                 <div class="card-body cart">
-                    <div class="col-sm-12 empty-cart-cls text-center" style="text-align:center"> <img src="https://ik.imagekit.io/slashit/choco_divine/box_d17XDatJFg.png"  width="130" height="130" class="img-fluid " style="  display: block;
+                    <div class="col-sm-12 empty-cart-cls text-center" style="text-align:center"> <img src="/images/order.png"  width="130" height="130" class="img-fluid " style="  display: block;
   margin-left: auto;
   margin-right: auto;
   ">                      <h3><strong> No orders Yet !</strong></h3>
