--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky">
-	<button class="navbar-toggler" type="button" style="float:left;border:none" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" onclick="openNav()">
+	<button class="navbar-toggler" type="button" style="float:left;border:none" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" >
 		<span>
 			<img src="/images/choco.png" alt="chocomenu" style="width:40px;height:40px;z-index:2">
 		</span>
