--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -35,7 +35,7 @@
             <div class="card">
 
                 <div class="card-body cart">
-                    <div class="col-sm-12 empty-cart-cls text-center" style="text-align:center"> <img src="https://i.imgur.com/dCdflKN.png" width="130" height="130" class="img-fluid " style="  display: block;
+                    <div class="col-sm-12 empty-cart-cls text-center" style="text-align:center"> <img src="/images/cart.png" width="130" height="130" class="img-fluid " style="  display: block;
   margin-left: auto;
   margin-right: auto;
   ">                      <h3><strong>Your Cart is Empty !</strong></h3>
@@ -48,4 +48,5 @@
 </div>
             <% } %>
         </main>
+    
         <%- include('../includes/end.ejs') %>
