--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -39,7 +39,7 @@
 											</tr>
 											<tr>
 												<td>
-												s	<div class='price'>
+													<div class='price'>
 														Price : <%= p.productId.price %>
 													</div>
 												</td>
