--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -36,7 +36,7 @@
 		</span>
 	</div>
 </footer>
-<script src="/js/index.js"></script>
+<script src="/js/button.js"></script>
 <script src="/js/sidenav.js" charset="utf-8"></script>
 <script src="/js/main.js"></script>
 
