--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -30,7 +30,7 @@
                                     <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
                                     <input type="hidden" value="<%= product._id %>" name="productId">
                                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                                    <button class="btn" type="button" onclick="deleteProduct(this)">Delete</button>
+                                    <button class="btn dlt" type="button" >Delete</button>
                                 </div>
                             </article>
                             <% } %>
