--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -119,8 +119,9 @@
 									</div>
 									<input type="hidden" name="_csrf" value="<%= csrfToken %>">
 									<button class="btn" type="submit">Pay on Delivery</button>
+									<button class="btn" type="submit">Pay with Paytm</button>
 								</div>
-												</form>
+								</form>
 							</div>
 
 					</div>
