--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,13 @@
 <%- include('includes/head.ejs') %>
+<%- include('includes/navigation.ejs') %>
 </head>
 
-<body>
-    <h1>Page Not Found!</h1>
+<body  >
+  <div  class="center" style="text-align:center">
+  <img src="/images/404.jpg" class="center" style="height:400px">
+
+  </div>
+
+
 
 <%- include('includes/end.ejs') %>
