--- a/views/500.ejs
+++ b/views/500.ejs
@@ -1,8 +1,13 @@
 <%- include('includes/head.ejs') %>
+<%- include('includes/navigation.ejs') %>
+<link rel="stylesheet" href="/css/500.css">
 </head>
 
 <body>
-    <h1>Some error occurred!</h1>
-    <p>We're working on fixing this, sorry for the inconvenience!</p>
+  <div class="titanic"></div>
+<img src="/images/500.png" alt="" class="center" style="height:300px;">
+<h1 data-txt="5⬡⬡" aria-label="Internal Server Error">5<span data-overlay="🤦‍♀️">⬡</span><span data-overlay="🤦‍♂️">⬡</span></h1>
+<p>It's broken, but it's not your fault.</p>
+
 
 <%- include('includes/end.ejs') %>
