--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,11 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky">
-	<button class="navbar-toggler" type="button" style="float:left;border:none" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" >
+	<button class="navbar-toggler" type="button" style="float:left;border:none" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		<span>
 			<img src="/images/choco.png" alt="chocomenu" style="width:40px;height:40px;z-index:2">
 		</span>
 	</button>
-		<span ><img src="/images/logo.png" alt="" style="width:60px;height:60px" class="center"></span>
-	<!-- <a href="#"><span class="fa fa-user"></span></a> -->
+	<span>
+		<img src="/images/logo.png" alt="" style="width:60px;height:60px" class="center">
+	</span>
 	<div class="collapse navbar-collapse" id="navbarNavDropdown">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
@@ -33,37 +34,20 @@
 			<li class="nav-item">
 				<a class="nav-link" href="/#contactus">Contact</a>
 			</li>
-
-
-
-
-
 		</ul>
-
 	</div>
 	<div style="right:50px">
-		<!-- <li class="nav-item dropdown"> -->
-			<% if (!isAuthenticated) { %>
-				<a href="/login" class="<%= path === '/login' ? 'active' : '' %>" ><button type="button" class="btn btn-success" >Login</button></a>
-		<%  }
-			else{  %>
-
-						<form action="/logout" method="post">
-								<input type="hidden" name="_csrf" value="<%= csrfToken %>">
-								<button type="submit" class="btn btn-success">Logout</button>
-						</form>
-
-		<%  } %>
-
-
-	<!-- </li> -->
-
-
+		<% if(!isAuthenticated) { %>
+			<a href="/login" class="<%= path === '/login' ? 'active' : '' %>" >
+				<button type="button" class="btn btn-success" >Login</button>
+			</a>
+		<% } else { %>
+			<form action="/logout" method="post">
+				<input type="hidden" name="_csrf" value="<%= csrfToken %>">
+				<button type="submit" class="btn btn-success">Logout</button>
+			</form>
+		<% } %>
 	</div>
-
-
-
-
 </nav>
 
 <!-- navbar ends -->
