--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -31,56 +31,51 @@
 
 </head>
 
-<body >
-
- <div class="preloader" >
-	 <img src="/images/preloader.webp" >
- </div>
+<body>
+	<div class="preloader" >
+		<img src="/images/preloader.webp" >
+	</div>
 	<div class="afterloader" style="display:none">
-
-
-	<!-- navbar  -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light sticky" >
-
-		<button class="navbar-toggler" type="button" style="float:left;border:none" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" >
-			<span ><img src="/images/choco.png" alt="chocomenu" style="width:40px;height:40px;z-index:2"> </span>
-		</button>
-		<span ><img src="/images/logo.png" alt="" style="width:60px;height:60px" class="center"></span>
-		<!-- <a href="#"><span class="fa fa-user"></span></a> -->
-		<div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-				</li>
-
-				<li class="nav-item">
-					<a class="nav-link" class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
-				</li>
-				<% if(isAuthenticated) { %>
-					<li class="nav-item">
-						<a class="nav-link" class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light sticky" >
+			<button class="navbar-toggler" type="button" style="float:left; border:none" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span>
+					<img src="/images/choco.png" alt="chocomenu" style="width:40px;height:40px;z-index:2">
+				</span>
+			</button>
+			<span>
+				<img src="/images/logo.png" alt="" style="width:60px;height:60px" class="center">
+			</span>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
+						<a class="nav-link" class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
 					</li>
-				<% } %>
-				<% if(isAdminAuthenticated) { %>
+					<% if(isAuthenticated) { %>
+						<li class="nav-item">
+							<a class="nav-link" class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
+						</li>
+					<% } %>
+					<% if(isAdminAuthenticated) { %>
+						<li class="nav-item">
+							<a class="nav-link" class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products</a>
+						</li>
+					<% } %>
 					<li class="nav-item">
-						<a class="nav-link" class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product</a>
+						<a class="nav-link" href="/#contactus">Contact</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products</a>
-					</li>
-				<% } %>
-				<li class="nav-item">
-					<a class="nav-link" href="/#contactus">Contact</a>
-				</li>
-			</ul>
-
-		</div>
-		<div style="right:50px">
-			<!-- <li class="nav-item dropdown"> -->
-				<% if (!isAuthenticated) { %>
+				</ul>
+			</div>
+			<div style="right:50px">
+				<% if(!isAuthenticated) { %>
 					<a href="/login" class="<%= path === '/login' ? 'active' : '' %>" ><button type="button" class="btn btn-success" >Login</button></a>
 			<%  }
 				else{  %>
