--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -31,7 +31,7 @@
 							<% } else { %>
 								<h1>Check here for order status</h1>
 							<% } %>
-							<% if(order.paid) { %>
+							<% if(order.paymentDone) { %>
 								<h1>Payment Completed!</h1>
 							<% } else { %>
 								<h1>Payment Pending...</h1>
