--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -118,8 +118,9 @@
 										</span>
 									</div>
 									<input type="hidden" name="_csrf" value="<%= csrfToken %>">
+									<input type="hidden" id="paymentMode" name="paymentMode" value="delivery">
 									<button class="btn" type="submit">Pay on Delivery</button>
-									<button class="btn" type="submit">Pay with Paytm</button>
+									<button class="btn" type="submit" onclick="paymentMode()">Pay with Paytm</button>
 								</div>
 								</form>
 							</div>
@@ -128,3 +129,4 @@
 				</div>
 			</main>
 			<%- include('../includes/end.ejs') %>
+			<script src="/js/checkout.js"></script>
